<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">烟雨客</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_home">首页</string>
    <string name="tab_me">我</string>
    <string name="tab_text">桐庐</string>
    <string name="text_search">搜索你想要的</string>
    <string name="icon_pay">全国购</string>
    <string name="icon_play">玩乐</string>
    <string name="icon_food">美食</string>
    <string name="icon_it">数码</string>
    <string name="icon_maket">超市</string>
    <string name="icon_house">房子</string>
    <string name="icon_car">汽车</string>
    <string name="icon_surprise">房子</string>
    <string name="text_like">猜你喜欢</string>
    <string name="user_name">李晓明</string>
    <string name="user_grade">LV0</string>
    <string name="name">姓  名</string>

    <!-- GridView -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="text">...</string>
    <string name="not_use">待使用</string>
    <string name="has_involved">已参与</string>
    <string name="not_pay">待付款</string>
    <string name="not_evalute">待评价</string>
    <string name="me_order">订单</string>
    <string name="user_hint">手机号/用户名/邮箱</string>
    <string name="user_client">账号</string>
    <string name="pwsd_client">请输入您的密码</string>
    <string name="user_pswd">密码</string>
    <string name="btn_login">登录</string>
    <string name="forget_pswd">忘记密码？</string>
    <!-- 注册步骤 -->
    <string name="num1">1</string>
    <string name="text1">手机号码验证</string>
    <string name="num2">2</string>
    <string name="text2">设置密码</string>
    <string name="num3">3</string>
    <string name="text3">注册成功</string>
    <string name="tel_num">手机号</string>
    <string name="test_code">验证码</string>
    <string name="tel_msg">仅支持中国大陆手机号</string>
    <string name="test_msg">输入您的验证码</string>
    <string name="next_type">下一步</string>
    <string name="get_test_code">获取验证码</string>
    <string name="user_agree">我已同意</string>
    <string name="user_protocol">《神齐夺宝用户协议》</string>
    <string name="new_tel_num">新密码</string>
    <string name="confirm_pswd">请确认</string>
    <string name="hint_pswd">请设置登录密码</string>
    <string name="hint_confirm">请再次输入该密码</string>
    <string name="next_finish">完成</string>
    <string name="success_info">恭喜您，注册成功！</string>
    <string name="success_hint">密码即情人，一定要照看好哟！</string>
    <string name="tv_detail_icon">头像</string>
    <string name="tv_detail_nickname">昵称</string>
    <string name="tv_detail_name">李晓明</string>
    <string name="tv_detail_date">生日</string>
    <string name="tv_detail_telnum">绑定手机</string>
    <string name="tv_detail_birthday">1991/6/22</string>
    <string name="tv_detail_text_number">138****6438</string>
    <string name="tv_detail_shop_address">收货地址</string>
    <string name="tv_detail_add_change">修改/添加</string>
    <string name="user_notofy_name">用户名</string>
    <string name="consingnee">收货人</string>
    <string name="contact">联系电话</string>
    <string name="area">所在地区</string>
    <string name="choice">请选择</string>
    <string name="address_info">浙江省杭州市桐庐县城南街道海陆世贸电子商务六区，神齐夺宝网络科技有限公司</string>
    <string name="submit">确认</string>
    <string name="cancel">取消</string>
    <string name="recharge_protocol">兑换方式：1元=1烟雨币，最小单位金额为1元，充值后不可申请退回。</string>
    <string name="my_money">我的佣金</string>
    <string name="my_bill">账单</string>
    <string name="invite_code">推荐码</string>
    <string name="hint_invite_code">若没有可不填</string>
    <string name="my_recommond_code">我的邀请码</string>
    <string name="my_referrer">我的推荐人</string>
    <string name="recommond_code">336709</string>
    <string name="my_referrer_name">夺宝小明</string>
    <string name="set_deposit_pswd">请输入原提现密码</string>
    <string name="pswd_action">两次密码输入不一致，请重新输入</string>
    <string name="forget_deposit_pswd">忘记了？</string>
    <string name="provice">省市区</string>
    <string name="detail_address">详细地址</string>
    <string name="business_submit_msg">说明：您提交的信息，有旅客控股有限公司承诺作为资质审核使用，不会透露第三方机构和个人</string>
    <string name="msg_detail">嗨！亲爱的烟雨客用户，你好运无敌，成为本次的幸运用户</string>
    <string name="grade_detail">超级棒的一次抢购体验，没想到两次就，好开心。关键是餐厅的位置真不错，味道比较好，气氛也比较不错</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="pay_method">支付方式</string>
    <string name="invite_friends">邀请好友</string>
    <string name="my_code">我的专属邀请码</string>
    <string name="company_info">杭州柚旅客控股有限公司</string>
    <string name="version_info">V1.0版</string>
    <string name="withdrawal_info">提现申请成功</string>
</resources>