<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- android:textColor="#3bbcf9" -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="68dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/shape_oval_gray"
            android:gravity="center"
            android:text="@string/num1"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/arrows_right"
            android:text="@string/text1"
            android:textColor="@color/indictor_gray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/shape_oval_blue"
            android:gravity="center"
            android:text="@string/num2"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/arrows_right"
            android:text="@string/text2"
            android:textColor="@color/indictor_blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/shape_oval_gray"
            android:gravity="center"
            android:text="@string/num3"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/arrows_right"
            android:text="@string/text3"
            android:textColor="@color/indictor_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_edit"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/wrap_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/new_tel_num"
                android:textColor="@color/text_color_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tv_pwsd1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_pswd"
                android:inputType="textPassword"
                android:textColorHint="@color/stroke_color"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/stroke_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/wrap_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/confirm_pswd"
                android:textColor="@color/text_color_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tv_pwsd2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_confirm"
                android:inputType="textPassword"
                android:textColorHint="@color/stroke_color"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_next"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_btn_next"
        android:text="@string/next_type"
        android:textColor="@android:color/white" />

    <LinearLayout
        style="@style/wrap_xy"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/protocol2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@mipmap/ring_nornal" />

        <TextView
            style="@style/wrap_xy"
            android:layout_marginLeft="10dp"
            android:text="@string/user_agree"
            android:textColor="@color/stroke_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_protocol"
            style="@style/wrap_xy"
            android:text="@string/user_protocol"
            android:textColor="@color/indictor_blue"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>