<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- android:textColor="#3bbcf9" -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="68dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/shape_oval_blue"
            android:gravity="center"
            android:text="@string/num1"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/arrows_right"
            android:text="@string/text1"
            android:textColor="@color/indictor_blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/shape_oval_gray"
            android:gravity="center"
            android:text="@string/num2"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/arrows_right"
            android:text="@string/text2"
            android:textColor="@color/indictor_gray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/shape_oval_gray"
            android:gravity="center"
            android:text="@string/num3"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawablePadding="15dp"
            android:drawableRight="@mipmap/arrows_right"
            android:text="@string/text3"
            android:textColor="@color/indictor_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_edit"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/wrap_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tel_num"
                android:textColor="@color/text_color_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tv_tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/tel_msg"
                android:inputType="phone"
                android:maxEms="11"
                android:textColor="@color/text_color_gray"
                android:textColorHint="@color/stroke_color"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/stroke_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/wrap_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/test_code"
                android:textColor="@color/text_color_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tv_test_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/test_msg"
                android:inputType="number"
                android:textColorHint="@color/stroke_color"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_test_code"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_btn_test_nornal"
                android:text="@string/get_test_code"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/stroke_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/wrap_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/invite_code"
                android:textColor="@color/text_color_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/tv_invite_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textColor="@color/text_color_gray"
                android:hint="@string/hint_invite_code"
                android:inputType="number"
                android:maxEms="6"
                android:textColorHint="@color/stroke_color"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/register_one"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_btn_next"
        android:text="@string/next_type"
        android:textColor="@android:color/white" />

    <LinearLayout
        style="@style/wrap_xy"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/protocol"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@mipmap/ring_nornal" />

        <TextView
            style="@style/wrap_xy"
            android:layout_marginLeft="10dp"
            android:text="@string/user_agree"
            android:textColor="@color/stroke_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_protocol"
            style="@style/wrap_xy"
            android:text="@string/user_protocol"
            android:textColor="@color/indictor_blue"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>