<?xml version="1.0" encoding="utf-8"?>
<net.youlvke.yanyuke.view.RegisterSuccessView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- android:textColor="#3bbcf9" -->

    <TextView
        android:id="@+id/tv_1"
        style="@style/wrap_xy"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="185dp"
        android:text="@string/success_info"
        android:textColor="@color/main_red"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_2"
        style="@style/wrap_xy"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/success_hint"
        android:textColor="@color/stroke_color"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_btn_normal"
        android:text="@string/next_finish"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</net.youlvke.yanyuke.view.RegisterSuccessView>